# AC-harness

./: .gitignore  README.md  pyproject.toml
ac_harness/: __init__.py  cli.py  schemas.py
ac_harness/adapters/: __init__.py  lm_eval.py  training_callback.py  vllm_serving.py
ac_harness/benchmarks/: __init__.py  kernel_plan.py  microbench_templates.py  serving_plan.py
ac_harness/decision/: __init__.py  disagreement.py  frontier.py  report.py  state.py
ac_harness/evaluator/: __init__.py  copy_task.py  lm_eval_adapter.py  mqar.py  needle.py  perplexity.py
ac_harness/executor/: __init__.py  import_only.py  local.py  slurm.py  status.py
ac_harness/fitter/: __init__.py  calibration_fit.py  interaction_fit.py  residual_fit.py  uncertainty.py
ac_harness/ingest/: __init__.py  ac_core.py
ac_harness/planner/: __init__.py  budget.py  experiment_plan.py  value_of_information.py
ac_harness/store/: __init__.py  jsonl_store.py  provenance.py  registry.py  sqlite_store.py
docs/: ac_core_boundary.md  decision_state.md  integration_guide.md  schemas.md  workflows.md
examples/ac_core_outputs/llama_h100_long_chat/: CalibrationRequest.json  DeltaReport.json  (+2 more)
examples/adapter_fixtures/: lm_eval_llama3_8b.json  training_log_my_run.jsonl  vllm_benchmark_llama3_8b.json
examples/imported_results/: decode_kv_fake.json
tests/: test_ac_core_ingest.py  test_benchmark_plan.py  test_cli_smoke.py  test_decision_state.py  test_evaluator_import.py  test_executor_import.py  test_experiment_planner.py  test_fitter_calibration.py  test_fitter_residual.py  test_schemas.py  test_store.py
(+5 files in other folders)
