[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ac-harness"
version = "0.1.0"
description = "AC-Harness: empirical research loop around hardware-aware architecture design. Observes, learns, and chooses the next experiment. Does NOT compile architectures."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AC-Harness contributors" }]
keywords = ["transformer", "architecture-search", "research-harness", "scaling-laws", "ac-core"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "pydantic>=2.5",
  "typer>=0.12",
  "rich>=13.7",
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
]

[project.scripts]
ach = "ac_harness.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ac_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
